--- a/detectors/image_local/CMakeLists.txt
+++ b/detectors/image_local/CMakeLists.txt
@@ -1,7 +1,7 @@
 set(SUBSYS_NAME local_image_detector)
 set(LIB_NAME od_${SUBSYS_NAME})
 set(SUBSYS_DESC "The local feature matching based detector")
-set(SUBSYS_DEPS od_common ${PCL_LIBRARIES} ${VTK_LIBRARIES} ${OpenCV_LIBS} pugixml)
+set(SUBSYS_DEPS od_common ${PCL_LIBRARIES} ${VTK_LIBRARIES} ${OpenCV_LIBS} pugixml siftgpu)
 
 set(build TRUE)
 #PCL_SUBSYS_OPTION(build "${SUBSYS_NAME}" "${SUBSYS_DESC}" ON)
@@ -10,14 +10,12 @@ set(build TRUE)
 
 if(build)
 
-    set(submodules
-          image_local
-    )
+    add_subdirectory(detection/simple_ransac_detection)
 
     set(incs
         "ODImageLocalMatching.h"
 
-        "training/SnapshotCorrMaker.h"
+        "training/SnapshotCorrTrainer.h"
         "detection/SimpleRansacDetector.h"
 
         )
@@ -27,14 +25,20 @@ if(build)
 
     set(srcs
         "ODImageLocalMatching.cpp"
-        "training/SnapshotCorrMaker.cpp"
+        "training/SnapshotCorrTrainer.cpp"
+        "detection/SimpleRansacDetector.cpp"
+
+        ${SUB_IMPL_SRCS}
         )
 
-    include_directories("${OD_SOURCE_DIR}")
+    #include all the individual implementation dirs
+
+
+    #set mandatory directories
+    include_directories("${OD_SOURCE_DIR}" )
 
     OD_ADD_LIBRARY_ALL("${SUBSYS_NAME}" SRCS ${srcs} INCS ${incs} ${impl_incs})
-    #OD_ADD_LIBRARY("${SUBSYS_NAME}" ${srcs} ${incs} ${impl_incs})
-    #OD_ADD_INCLUDES("${SUBSYS_NAME}" ${incs} ${impl_incs})
+
 
     if(SUBSYS_DEPS)
       target_link_libraries("${LIB_NAME}" ${SUBSYS_DEPS})
