Added installatio instruction; resolved a bug in global pipeline

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,7 +31,7 @@ include(od_targets)
 include(od_mandatory_dependency)
 
 # 2. collect config options and set appropriate variables which will be used in the next hierarchy
-option(BUILD_DOCUMENTATION "Build the OD documentation" ON)
+option(WITH_DOCUMENTATION "Build the OD documentation" ON)
 option(WITH_GPU "Build GPU components of the project" ON)
 
 
