--- a/examples/objectdetector/CMakeLists.txt
+++ b/examples/objectdetector/CMakeLists.txt
@@ -7,7 +7,16 @@ OD_ADD_EXAMPLE(od_image_camera FILES od_image_camera.cpp
 OD_ADD_EXAMPLE(od_example_files FILES od_example_files.cpp
                 LINK_WITH od_common od_local_image_detector)
 
+OD_ADD_EXAMPLE(od_image_hog FILES od_image_hog.cpp
+                LINK_WITH od_common od_global_image_detector)
+
+
+
+
 OD_ADD_EXAMPLE(od_example_pc_global FILES od_example_pc_global.cpp
+                LINK_WITH od_common od_pointcloud_global_detector)
+
+OD_ADD_EXAMPLE(od_example_pc_global_files FILES od_example_pc_global_files.cpp
                 LINK_WITH od_common od_pointcloud_global_detector)
 
 OD_ADD_EXAMPLE(od_example_pc_global_real_time FILES od_example_pc_global_real_time.cpp
