--- a/detectors/image_global/CMakeLists.txt
+++ b/detectors/image_global/CMakeLists.txt
@@ -13,8 +13,9 @@ set(build TRUE)
 if(build)
 
     set(incs
-
+        "ODFaceRecognizer.h"
         "detection/ODHOGMultiscaleDetector.h"
+        "detection/ODCascadeDetector.h"
 
         )
 
@@ -22,8 +23,9 @@ if(build)
         )
 
     set(srcs
-
+        ODFaceRecognizer.cpp
         "detection/ODHOGMultiscaleDetector.cpp"
+        "detection/ODCascadeDetector.cpp"
         )
 
 
