--- a/examples/objectdetector/CMakeLists.txt
+++ b/examples/objectdetector/CMakeLists.txt
@@ -7,7 +7,16 @@ OD_ADD_EXAMPLE(od_image_camera FILES od_image_camera.cpp
 OD_ADD_EXAMPLE(od_example_files FILES od_example_files.cpp
                 LINK_WITH od_common od_local_image_detector)
 
+
+
+
 OD_ADD_EXAMPLE(od_image_hog FILES od_image_hog.cpp
+                LINK_WITH od_common od_global_image_detector)
+
+OD_ADD_EXAMPLE(od_image_cascade FILES od_image_cascade.cpp
+                LINK_WITH od_common od_global_image_detector)
+
+OD_ADD_EXAMPLE(od_image_facerecog FILES od_image_facerecog.cpp
                 LINK_WITH od_common od_global_image_detector)
 
 
