Added Algorithm specific training directories and file extensions

--- a/examples/objectdetector/CMakeLists.txt
+++ b/examples/objectdetector/CMakeLists.txt
@@ -13,6 +13,9 @@ OD_ADD_EXAMPLE(od_example_files FILES od_example_files.cpp
 OD_ADD_EXAMPLE(od_image_hog FILES od_image_hog.cpp
                 LINK_WITH od_common od_global_image_detector)
 
+OD_ADD_EXAMPLE(od_image_customhog FILES od_image_customhog.cpp
+                LINK_WITH od_common od_global_image_detector)
+
 OD_ADD_EXAMPLE(od_image_cascade FILES od_image_cascade.cpp
                 LINK_WITH od_common od_global_image_detector)
 
