implemented detect method for object candidate for few old classes

--- a/common/CMakeLists.txt
+++ b/common/CMakeLists.txt
@@ -25,6 +25,7 @@ if(build)
 
         "pipeline/ODTrainer.h"
         "pipeline/ODDetector.h"
+        "pipeline/ODDetectorMultiAlgo.h"
 
         "utils/ODFrameGenerator.h"
         "utils/utils.h"
