1. Added a type of Detection 2. changed format of detect* methods 3. Added MultiAlgo detector (incomplete)

--- a/examples/objectdetector/CMakeLists.txt
+++ b/examples/objectdetector/CMakeLists.txt
@@ -37,3 +37,8 @@ OD_ADD_EXAMPLE(od_example_pc_global_real_time FILES od_example_pc_global_real_ti
 OD_ADD_EXAMPLE(od_example_framegenerator FILES od_example_framegenerator.cpp
                 LINK_WITH od_common)
 
+
+
+OD_ADD_EXAMPLE(od_multialgo_files FILES od_multialgo_files.cpp
+                LINK_WITH od_miscellaneous_detector)
+
