Cleaned up the inconsistencies and renamed the classes 1. Implemented basic  detect* methods to detectors where it was not present to have both detect and detectOmni methods. 2. Renamed classes to more meaningful names 3. Refractored few classes to make a clean implementation

--- a/detectors/global2D/CMakeLists.txt
+++ b/detectors/global2D/CMakeLists.txt
@@ -14,7 +14,7 @@ if(build)
 
     set(incs
         "ODFaceRecognizer.h"
-        "detection/ODHOGMultiscaleDetector.h"
+        "detection/ODHOGDetector.h"
         "detection/ODCascadeDetector.h"
 
         )
@@ -24,7 +24,7 @@ if(build)
 
     set(srcs
         ODFaceRecognizer.cpp
-        "detection/ODHOGMultiscaleDetector.cpp"
+        "detection/ODHOGDetector.cpp"
         "detection/ODCascadeDetector.cpp"
         )
 
