--- a/examples/objectdetector/CMakeLists.txt
+++ b/examples/objectdetector/CMakeLists.txt
@@ -42,3 +42,6 @@ OD_ADD_EXAMPLE(od_example_framegenerator FILES od_example_framegenerator.cpp
 OD_ADD_EXAMPLE(od_multialgo_files FILES od_multialgo_files.cpp
                 LINK_WITH od_miscellaneous_detector)
 
+OD_ADD_EXAMPLE(od_multialgo_pc FILES od_multialgo_pc.cpp
+                LINK_WITH od_miscellaneous_detector)
+
