1. added svmlight 2. removed using namespace from header files

--- a/common/CMakeLists.txt
+++ b/common/CMakeLists.txt
@@ -29,6 +29,8 @@ if(build)
         "utils/ODFrameGenerator.h"
         "utils/utils.h"
         "utils/ODFeatureDetector2D.h"
+
+        "bindings/svmlight.h"
         )
 
     set(impl_incs
