--- a/3rdparty/CMakeLists.txt
+++ b/3rdparty/CMakeLists.txt
@@ -1,6 +1,6 @@
 #add mandatory 3rd party builds
 add_subdirectory(pugixml-1.6)
-
+add_subdirectory(svmlight)
 if(WITH_GPU)
   #option(SIFTGPU_ENABLE_CUDA "Enable cuda for SIFTGPU" OFF)
   add_subdirectory(SiftGPU)
