Added ODHOGTrainer - a trainer class for training HOG based detectors

--- a/detectors/global2D/CMakeLists.txt
+++ b/detectors/global2D/CMakeLists.txt
@@ -2,7 +2,7 @@ set(SUBSYS_NAME global_image_detector)
 set(LIB_NAME od_${SUBSYS_NAME})
 set(SUBSYS_DESC "global feature based detection in 2D images")
 
-set(SUBSYS_DEPS od_common ${OpenCV_LIBS})
+set(SUBSYS_DEPS od_common ${OpenCV_LIBS} od_svmlight)
 
 
 set(build TRUE)
