Added Detection2D documentation with a tutorial on HOG

--- a/examples/objectdetector/CMakeLists.txt
+++ b/examples/objectdetector/CMakeLists.txt
@@ -18,10 +18,10 @@ OD_ADD_EXAMPLE(od_image_hog_files FILES od_image_hog_files.cpp
 OD_ADD_EXAMPLE(od_image_customhog FILES od_image_customhog.cpp
                 LINK_WITH od_common od_global_image_detector)
 
-OD_ADD_EXAMPLE(od_image_cascade FILES od_image_cascade.cpp
+OD_ADD_EXAMPLE(od_cascade_cam FILES od_cascade_cam.cpp
                 LINK_WITH od_common od_global_image_detector)
 
-OD_ADD_EXAMPLE(od_image_cascade_files FILES od_image_cascade_files.cpp
+OD_ADD_EXAMPLE(od_cascade_files FILES od_cascade_files.cpp
                 LINK_WITH od_common od_global_image_detector)
 
 OD_ADD_EXAMPLE(od_image_facerecog FILES od_image_facerecog.cpp
