Removed SVM light source, added required cmake options

--- a/3rdparty/CMakeLists.txt
+++ b/3rdparty/CMakeLists.txt
@@ -1,7 +1,10 @@
 #add mandatory 3rd party builds
 add_subdirectory(pugixml-1.6)
-add_subdirectory(svmlight)
+
+if(WITH_SVMLIGHT)
+  add_subdirectory(svmlight)
+endif(WITH_SVMLIGHT)
+
 if(WITH_GPU)
-  #option(SIFTGPU_ENABLE_CUDA "Enable cuda for SIFTGPU" OFF)
   add_subdirectory(SiftGPU)
 endif(WITH_GPU)
